[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["galetttt <petrusevich.g64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
flake8 = "^4.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
